# OpenJK

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
assets/effects/: spark_new.efx
assets/effects/blaster_new/: flesh_impact.efx  npcshot.efx  shot.efx  sparks.efx  wall_impact.efx
assets/effects/bowcaster_new/: bounce.efx  deflect.efx  explosion.efx  shot.efx  sparks.efx  sparks2.efx
assets/effects/bryar_new/: crackleshot.efx  flesh_impact.efx  npcshot.efx  shot.efx  sparks.efx  sparks2.efx  sparks3.efx  wall_impact.efx  wall_impact2.efx  wall_impact3.efx
assets/effects/flechette_new/: alt_blow.efx  alt_shot.efx  flesh_impact.efx  wall_impact.efx
assets/gfx/2d/: crosshairj.tga
assets/shaders/: openjo.shader
assets/strip/: openjo.sp
assets/ui/: controls.menu  datapadforcepowers.menu  datapadinventory.menu  datapadmission.menu  datapadweapons.menu  error.menu  ingame.menu  ingamecontrols.menu  ingameload.menu  ingamequit.menu  ingamesave.menu  ingamesetup.menu  loadgame.menu  main.menu  newgame.menu  quit.menu  setup.menu  vid_warning.menu  videodriver.menu
assets/ui/common/: background.inc  commonitems.inc  ingamemenubuttons.inc  mainmenubuttons.inc
assets/ui/controls/: attack.inc  buttons.inc  controls.inc  force.inc  inventory.inc  mousejoystick.inc  movement.inc  other.inc  quickkeys.inc  text.inc  weapons.inc
assets/ui/datapad/: common.inc
assets/ui/load/: load.inc
assets/ui/setup/: buttons.inc  defaults.inc  lang.inc  mods.inc  options.inc  other.inc  setup.inc  sound.inc  video1.inc  video2.inc  videorestart.inc
cmake/Modules/: InstallConfig.cmake
code/: CMakeLists.txt
code/cgame/: cg_draw.cpp
code/qcommon/: common.cpp  files.cpp  qcommon.h
code/rd-vanilla/: tr_backend.cpp  tr_init.cpp
code/ui/: menudef.h  ui_atoms.cpp  ui_define.cpp  ui_define.h  ui_layout.cpp  ui_local.h  ui_main.cpp  ui_shared.cpp  ui_shared.h
codeJK2/cgame/: cg_camera.cpp  cg_draw.cpp  cg_ents.cpp  cg_info.cpp  cg_main.cpp  cg_players.cpp  cg_view.cpp
codeJK2/game/: AI_Jedi.cpp  NPC_spawn.cpp  bg_pmove.cpp  weapons.h  wp_repeater.cpp  wp_saber.cpp
scripts/: CreateVisualStudio2013Projects.bat  CreateVisualStudio2015Projects.bat  CreateVisualStudio2017Projects.bat  CreateVisualStudio2019Projects.bat  CreateVisualStudio2022Projects.bat  utils.sh
shared/qcommon/: q_math.c
shared/sdl/: sdl_window.cpp
shared/sys/: sys_unix.cpp
src/: CMakeLists.txt
src/Ragl/: graph_region.h  graph_triangulate.h  graph_vs.h  kdtree_vs.h  ragl_common.h
src/Ratl/: bits_vs.h  grid_vs.h  handle_pool_vs.h  hash_pool_vs.h  heap_vs.h  list_vs.h  map_vs.h  pool_vs.h  queue_vs.h  ratl.cpp  ratl_common.h  stack_vs.h  string_vs.h  vector_vs.h
src/Ravl/: CBounds.cpp  CMatrix.h  CVec.cpp
src/Rufl/: hfile.cpp  hstring.cpp
src/cgame/: FX_Blaster.cpp  FX_BryarPistol.cpp  FxScheduler.cpp  FxScheduler.h  FxTemplate.cpp  cg_camera.cpp  cg_credits.cpp  cg_draw.cpp  cg_drawtools.cpp  cg_ents.cpp  cg_event.cpp  cg_info.cpp  cg_local.h  cg_main.cpp  cg_media.h  cg_players.cpp  cg_predict.cpp  cg_public.h  cg_scoreboard.cpp  cg_syscalls.cpp  cg_text.cpp  cg_view.cpp  cg_weapons.cpp
src/client/: cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_mp3.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  client_ui.h  snd_ambient.cpp  snd_ambient.h  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_music.cpp  vmachine.h
src/game/: AI_Grenadier.cpp  AI_Jedi.cpp  AI_Stormtrooper.cpp  G_Timer.cpp  NPC_behavior.cpp  NPC_combat.cpp  NPC_misc.cpp  NPC_senses.cpp  NPC_stats.cpp  Q3_Interface.cpp  Q3_Registers.cpp  anims.h  animtable.cpp  bg_misc.cpp  bg_pangles.cpp  bg_panimate.cpp  bg_pmove.cpp  bg_slidemove.cpp  g_ICARUS.cpp  g_active.cpp  g_breakable.cpp  g_camera.cpp  g_client.cpp  g_combat.cpp  g_functions.cpp  g_fx.cpp  g_headers.h  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_misc_model.cpp  g_missile.cpp  g_nav.cpp  g_navigator.cpp  g_objectives.cpp  g_public.h  g_ref.cpp  g_roff.cpp  g_roff.h  (+24 more)
src/ghoul2/: ghoul2_gore.h  ghoul2_shared.h
src/icarus/: BlockStream.cpp  Instance.cpp  Sequence.cpp  Sequencer.cpp  TaskManager.cpp  icarus.h  interface.h  taskmanager.h
src/macosx/: OpenJKInfo.plist
src/mp3code/: csbtl3.c  cup.c  cupl1.c
src/qcommon/: chash.h  cm_load.cpp  common.cpp  cvar.cpp  files.cpp  hstring.cpp  hstring.h  msg.cpp  net_chan.cpp  ojk_saved_game.cpp  ojk_saved_game.h  q_assert.cpp  q_assert.h  q_math.c  q_shared.cpp  q_shared.h  q_string.c  q_string.h  qcommon.h  sstring.h  stringed_ingame.cpp  stringed_interface.cpp  strip.cpp  strippublic.h  stv_version.h  tri_coll_test.h  z_memman_pc.cpp
src/qcommon/safe/: files.cpp  limited_vector.h  sscanf.h  string.h
src/rd-common/: mdx_format.h  tr_common.h  tr_font.cpp  tr_image_jpg.cpp  tr_image_load.cpp  tr_image_png.cpp  tr_image_tga.cpp  tr_noise.cpp  tr_public.h  tr_types.h
src/rd-vanilla/: CMakeLists.txt  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  tr_WorldEffects.cpp  tr_WorldEffects.h  tr_arb.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_curve.cpp  tr_draw.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_quicksprite.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_skin.cpp  tr_sky.cpp  tr_stl.cpp  tr_subs.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_world.cpp
src/sdl/: sdl_window.cpp
src/server/: exe_headers.cpp  exe_headers.h  server.h  sv_ccmds.cpp  sv_client.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_savegame.cpp  sv_snapshot.cpp  sv_world.cpp
src/sys/: con_log.cpp  con_tty.cpp  sys_main.cpp  sys_public.h  sys_unix.cpp
src/ui/: gameinfo.cpp  gameinfo.h  ui_atoms.cpp  ui_connect.cpp  ui_define.cpp  ui_layout.cpp  ui_layout.h  ui_local.h  ui_main.cpp  ui_public.h  ui_saber.cpp  ui_shared.cpp  ui_syscalls.cpp
src/win32/: game.rc
tests/: CMakeLists.txt
ui/: menudef.h
